src-ken&y/objects/Pricebook_Line__c.object
<CustomObject>
    <customHelpPage>HelpPricebooks</customHelpPage>
    <description>Record individual prices for a Product at an effective time</description>
    <fields>
        <fullName>Currency__c</fullName>
        <formula>Pricebook__r.Currency__r.ISO_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Sales Order Customer value does not exist or does not match filter criteria.</errorMessage>
            <filterItems>
                <field>Customer__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Sold To</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Pricebook Lines</relationshipLabel>
        <relationshipName>Pricebook_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data_Load__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this field is checked, it will bypass validations.  For data loading only.</description>
        <label>Data Load</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>When does this price expire effective</description>
        <inlineHelpText>End date for this price</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Max__c</fullName>
        <label>Max</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min__c</fullName>
        <label>Min</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_2__c</fullName>
        <label>Price 2</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_3__c</fullName>
        <label>Price 3</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_4__c</fullName>
        <label>Price 4</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_Type__c</fullName>
        <label>Price Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Recurring</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <description>The Product price in this pricebook</description>
        <inlineHelpText>If fixed pricing is not selected, the price is based on the bracket/weight-based price for the product. To manage price brackets go to the Company page.</inlineHelpText>
        <label>Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pricebook_Identifier__c</fullName>
        <description>used in data load to set the pricebook</description>
        <label>Pricebook Identifier</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricebook__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Pricebook</label>
        <referenceTo>Pricebook__c</referenceTo>
        <relationshipLabel>Pricebook Lines</relationshipLabel>
        <relationshipName>Pricebook_Lines</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pricing_UOM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pricing UOM</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>UOM__c.Type__c</field>
                <operation>equals</operation>
                <value>Time</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>UOM__c</referenceTo>
        <relationshipLabel>Pricebook Lines</relationshipLabel>
        <relationshipName>Pricebook_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Primary Key</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product group to which this pricebook line belongs</description>
        <label>Product Group</label>
        <referenceTo>Product_Group__c</referenceTo>
        <relationshipLabel>Pricebook Lines</relationshipLabel>
        <relationshipName>Pricebook_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Identifier__c</fullName>
        <description>Identifier to locate and link to a product at data load time</description>
        <label>Product Identifier</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Pricebook Lines</relationshipLabel>
        <relationshipName>Pricebook_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Selling_UOM__c</fullName>
        <formula>Product__r.Selling_UOM__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Selling UOM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>When does this price become effective</description>
        <inlineHelpText>Start date for this price</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Suggested_Retail_Price__c</fullName>
        <description>The Product price in this pricebook</description>
        <label>Suggested Retail Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Suggested_Wholesale_Price__c</fullName>
        <description>The Product price in this pricebook</description>
        <label>Suggested Wholesale Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Use_Fixed_Pricing__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When checked, bracket pricing would be ignored only Price field will be used in all calculations.</description>
        <inlineHelpText>If selected, the product line set to a fixed price. Otherwise, it uses bracket/weight-based pricing.</inlineHelpText>
        <label>Use Fixed Pricing</label>
        <type>Checkbox</type>
    </fields>
    <label>Pricebook Line</label>
    <nameField>
        <displayFormat>PB-{0000000000}</displayFormat>
        <label>Pricebook Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pricebook Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Block_New_Lines_in_past_dates</fullName>
        <active>true</active>
        <description>Blocks creation of new pricebook lines in past dates</description>
        <errorConditionFormula>AND(
ISNEW(), 
(OR(Start_Date__c &lt; TODAY(), End_Date__c &lt; TODAY())),
Data_Load__c = false
)</errorConditionFormula>
        <errorMessage>Cannot create lines with historical dates</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Either_of_Product_or_Product_Group_Reqd</fullName>
        <active>true</active>
        <description>User can&apos;t enter both Product and Product group, only one should be present on the Pricebook line record</description>
        <errorConditionFormula>OR (
	AND (
		 ISBLANK( Product_Group__c ),
		 ISBLANK(  Product__c  ) 
	)	
,
	AND (
		NOT( ISBLANK( Product_Group__c ) ),
		NOT( ISBLANK(  Product__c  ) )
	)
)</errorConditionFormula>
        <errorMessage>Either a Product or Product Group is required.</errorMessage>
    </validationRules>
</CustomObject>